--- a/Arrays/pom.xml
+++ b/Arrays/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.vthakkar</groupId>
   <artifactId>gfg</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>gfg</name>
   <url>http://maven.apache.org</url>
   <dependencies>
